--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,45 @@ h1, h2, h3, h4 {
   font-weight: 800;
 }
 
+.login-page {
+  align-items: center;
+  background-color: #7b38df;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  height: 100%;
+  justify-content: center;
+}
+
+.login-page h2 {
+  color: white;
+  font-style: italic;
+  font-weight: 700;
+}
+
+.login-form {
+  align-items: center;
+  background-color: #fb0;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  padding: 2rem;
+}
+
+.btn-1 {
+  background-color: #7b38df;
+  border-radius: 5px;
+  color: white;
+  padding: 7px 0;
+  width: 100%;
+}
+
+.btn-1:disabled {
+  opacity: 50%;
+}
+
 .text-input {
   border: #7b38df solid 1px;
   border-radius: 5px;
