--- a/src/Components/recipes.css
+++ b/src/Components/recipes.css
@@ -2,7 +2,15 @@
   display: flex;
   flex-flow: row wrap;
   gap: 1rem;
+  height: calc(100vh - 500px);
   justify-content: center;
+  overflow: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.recipes-grid::-webkit-scrollbar {
+  display: none;
 }
 
 .recipes-card {
