--- a/src/Components/recipes.css
+++ b/src/Components/recipes.css
@@ -66,7 +66,7 @@
   flex-direction: column;
   gap: 1rem;
   height: calc(44% + 360px);
-  overflow: auto;
+  overflow: scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
