--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   background-color: white;
   border-radius: 15px;
   height: 640px;
+  overflow: hidden;
   position: relative;
   width: 360px;
 } */
